@@ -164,8 +164,10 @@ save business processes objects to object file
 sub save_bp_objects {
     my($c, $bps) = @_;
 
-    my $file = $c->config->{'Thruk::Plugin::BP'}->{'objects_save_file'};
-    return(0, 'ok') unless $file;
+    my $file   = $c->config->{'Thruk::Plugin::BP'}->{'objects_save_file'};
+    my $format = $c->config->{'Thruk::Plugin::BP'}->{'objects_save_format'} || 'nagios';
+    if($format ne 'icinga2') { $format = 'nagios'; }
+    return(1, 'no \'objects_save_file\' set') unless $file;
 
     my($rc, $msg) = (0, 'reload ok');
     my $obj = {'hosts' => {}, 'services' => {}};
@@ -176,23 +178,15 @@ sub save_bp_objects {
 
     my($fh, $filename) = tempfile();
     binmode($fh, ":encoding(UTF-8)");
-    print $fh "# thruk: readonly\n\n";
-    print $fh "# don't change, file is generated by thruk and will be overwritten.\n\n\n";
-    for my $hostname (keys %{$obj->{'hosts'}}) {
-        print $fh 'define host {', "\n";
-        for my $attr (keys %{$obj->{'hosts'}->{$hostname}}) {
-            print $fh ' ', $attr, ' ', $obj->{'hosts'}->{$hostname}->{$attr}, "\n";
-        }
-        print $fh "}\n";
+    print $fh "########################\n";
+    print $fh "# thruk: readonly\n";
+    print $fh "# don't change, file is generated by thruk and will be overwritten.\n";
+    print $fh "########################\n\n\n";
+    if($format eq 'nagios') {
+        print $fh _get_nagios_objects($c, $obj);
     }
-    for my $hostname (keys %{$obj->{'services'}}) {
-        for my $description (keys %{$obj->{'services'}->{$hostname}}) {
-            print $fh 'define service {', "\n";
-            for my $attr (keys %{$obj->{'services'}->{$hostname}->{$description}}) {
-                print $fh ' ', $attr, ' ', $obj->{'services'}->{$hostname}->{$description}->{$attr}, "\n"
-            }
-            print $fh "}\n";
-        }
+    elsif($format eq 'icinga2') {
+        print $fh _get_icinga2_objects($c, $obj);
     }
 
     Thruk::Utils::IO::close($fh, $filename);
@@ -520,6 +514,102 @@ return base folder of business process files
 sub bp_base_folder {
     my($c) = @_;
     return(Thruk::Utils::base_folder($c).'/bp');
+}
+
+##########################################################
+# return objects in nagios format
+sub _get_nagios_objects {
+    my($c, $obj) = @_;
+
+    my $str = "";
+    for my $hostname (sort keys %{$obj->{'hosts'}}) {
+        $str .= 'define host {'. "\n";
+        my $keys = _get_sorted_keys([keys %{$obj->{'hosts'}->{$hostname}}]);
+        for my $attr (@{$keys}) {
+            $str .= ' '. $attr. ' '. $obj->{'hosts'}->{$hostname}->{$attr}. "\n";
+        }
+        $str .= "}\n";
+    }
+    for my $hostname (sort keys %{$obj->{'services'}}) {
+        for my $description (sort keys %{$obj->{'services'}->{$hostname}}) {
+            $str .= 'define service {'. "\n";
+            my $keys = _get_sorted_keys([keys %{$obj->{'services'}->{$hostname}->{$description}}]);
+            for my $attr (@{$keys}) {
+                $str .= ' '. $attr. ' '. $obj->{'services'}->{$hostname}->{$description}->{$attr}. "\n"
+            }
+            $str .= "}\n";
+        }
+    }
+
+    return($str);
+}
+
+##########################################################
+# return objects in icinga2 format
+sub _get_icinga2_objects {
+    my($c, $obj) = @_;
+
+    my $str = "";
+    for my $hostname (sort keys %{$obj->{'hosts'}}) {
+        $str .= 'object Host "'.$hostname.'" {'. "\n";
+        my $keys = _get_sorted_keys([keys %{$obj->{'hosts'}->{$hostname}}]);
+        for my $attr (@{$keys}) {
+            next if $attr eq 'host_name';
+            $str .= _get_icinga2_object_attr('host', $attr, $obj->{'hosts'}->{$hostname}->{$attr});
+        }
+        $str .= "}\n";
+    }
+    for my $hostname (sort keys %{$obj->{'services'}}) {
+        for my $description (sort keys %{$obj->{'services'}->{$hostname}}) {
+            $str .= 'object Service "'.$description.'" {'. "\n";
+            my $keys = _get_sorted_keys([keys %{$obj->{'services'}->{$hostname}->{$description}}]);
+            for my $attr (@{$keys}) {
+                next if $attr eq 'service_description';
+                $str .= _get_icinga2_object_attr('service', $attr, $obj->{'services'}->{$hostname}->{$description}->{$attr});
+            }
+            $str .= "}\n";
+        }
+    }
+
+    return($str);
+}
+
+##########################################################
+sub _get_icinga2_object_attr {
+    my($type, $attr, $val) = @_;
+    my $key = $attr;
+    if($attr =~ m/^_(.*)$/mx) {
+        $key = 'vars.'.$1;
+    }
+    if($attr eq 'use') {
+        my @templates = split(/\s*,\s*/mx, $val);
+        my $str = "";
+        for my $tpl (@templates) {
+            $str .= ' import "'.$tpl. "\"\n";
+        }
+        return($str);
+    }
+    if($attr =~ m/_interval$/mx) {
+        $val = $val.'m';
+    }
+    if($key eq 'alias') {
+        $key = "display_name";
+    }
+    return(' '. $key. ' = "'.$val. "\"\n");
+
+}
+
+##########################################################
+sub _get_sorted_keys {
+    my($keys) = @_;
+    eval {
+        require Monitoring::Config::Object::Parent;
+        require Monitoring::Config;
+        Monitoring::Config::set_save_config();
+        my @keys = @{Monitoring::Config::Object::Parent::get_sorted_keys(undef, $keys)};
+        return \@keys;
+    };
+    return $keys;
 }
 
 ##########################################################
