@@ -1,0 +1,38 @@
+template Host "thruk-bp-template" {
+  address                        = "Business Process"
+  enable_active_checks           = 0
+  check_command                  = "check_thruk_bp"
+  check_interval                 = 1m
+  check_period                   = "thruk_24x7"
+  max_check_attempts             = 3
+  retry_interval                 = 1m
+}
+
+template Service "thruk-bp-node-template" {
+  enable_active_checks           = 0
+  check_command                  = "check_thruk_bp"
+  check_interval                 = 1m
+  check_period                   = "thruk_24x7"
+  max_check_attempts             = 3
+  retry_interval                 = 1m
+}
+
+object CheckCommand "check_thruk_bp" {
+  import                           "plugin-check-command"
+  command                        = "thruk -a bp $host.vars.THRUK_BP_ID$"
+}
+
+object TimePeriod "thruk_24x7" {
+  import                           "legacy-timeperiod"
+  display_name                   = "24 Hours A Day, 7 Days A Week"
+  ranges = {
+    monday                       = "00:00-24:00"
+    tuesday                      = "00:00-24:00"
+    wednesday                    = "00:00-24:00"
+    thursday                     = "00:00-24:00"
+    friday                       = "00:00-24:00"
+    saturday                     = "00:00-24:00"
+    sunday                       = "00:00-24:00"
+  }
+}
+
