@@ -855,10 +855,13 @@ cookie_auth_direct_agents         = (wget|curl)
     # Save objects to this file. Content will be overwritten.
     #objects_save_file = /etc/naemon/conf.d/thruk_bp_generated.cfg
 
+    # Save format can be either 'nagios' or 'icinga2'.
+    #objects_save_format = nagios
+
     # User maintained file containing templates used for business process services.
     #objects_templates_file = /etc/naemon/conf.d/thruk_templates.cfg
 
-    # Command to apply changes to the objects_save_file. If no set and
+    # Command to apply changes to the objects_save_file. If not set and
     # and result_backend is used, the restart will be triggered as external command.
     #objects_reload_cmd = /etc/init.d/naemon reload
 
